fix: comment count colour in dark mode for Giscus theme

--- a/static/css/giscus-v2.css
+++ b/static/css/giscus-v2.css
@@ -205,4 +205,8 @@ main .gsc-loading-image {
   main .gsc-loading-image {
     background-image: url("https://github.githubassets.com/images/mona-loading-dark.gif");
   }
+
+  .gsc-comments-count {
+    color: #e6edf3 !important;
+  }
 }
